fix: panel overflow

--- a/admin/src/assets/styles/components/_Panel.scss
+++ b/admin/src/assets/styles/components/_Panel.scss
@@ -6,7 +6,6 @@
 	border-radius: $br-10;
 	box-shadow: $box-shadow-small;
 	color: $black;
-	overflow: hidden;
 	padding: 1.5em;
 
 	&-floating[class] {
